--- a/static/success.html
+++ b/static/success.html
@@ -3,21 +3,22 @@
 <head>
   <meta charset="utf-8">
   <title>Success — Tesla Access</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    body { font-family: Arial, sans-serif; background:#f5f5f7; display:flex; align-items:center; justify-content:center; height:100vh; margin:0; }
-    .card { background:white; padding:30px; border-radius:12px; box-shadow:0 8px 30px rgba(0,0,0,0.12); text-align:center; width:480px;}
-    .check { font-size:48px; color:green; }
-    h1 { margin:12px 0; }
-    p { color:#444; }
-    a { display:inline-block; margin-top:18px; color:black; text-decoration:none; padding:10px 16px; border-radius:8px; background:#eee;}
+    body{font-family:Arial,Helvetica,sans-serif;background:#f5f5f7;margin:0;display:flex;align-items:center;justify-content:center;height:100vh}
+    .card{background:#fff;padding:30px;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,.12);width:420px;text-align:center}
+    .check{font-size:46px;color:#0a8a3d}
+    h1{margin:.4rem 0}
+    p{color:#444}
+    a{display:inline-block;margin-top:18px;padding:10px 16px;background:#000;color:#fff;border-radius:8px;text-decoration:none}
   </style>
 </head>
 <body>
   <div class="card">
     <div class="check">✓</div>
     <h1>You're in — Welcome!</h1>
-    <p>Thanks — your payment was processed and your card has been saved for future access or charges.</p>
-    <a href="/">Return to checkout</a>
+    <p>Thanks — your payment completed and your card has been saved for future admin charges.</p>
+    <a href="/">Back to Checkout</a>
   </div>
 </body>
 </html>
